<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add_household.AddHouseholdActivity"
    android:orientation="vertical">
    
    <TextView
        android:id="@+id/textview_create_household"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_or_create_household" />

    <EditText
        android:id="@+id/add_household"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/household_id_hint"
        android:inputType="text"
        android:contentDescription="@string/add_household"/>

    <Button
        android:id="@+id/button_add_household"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join_household"
        android:layout_margin="@dimen/button_margin"/>

    <Button
        android:id="@+id/button_create_household"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_household"
        android:layout_margin="@dimen/button_margin"/>


</LinearLayout>