<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_todolist">

    <fragment
        android:id="@+id/nav_todolist"
        android:name="de.reitler.cleaning_plan_android_client.ui.todolist.ToDoListFragment"
        android:label="@string/menu_todolist"
        tools:layout="@layout/fragment_todolist" />

    <fragment
        android:id="@+id/nav_household"
        android:name="de.reitler.cleaning_plan_android_client.ui.household.HouseholdFragment"
        android:label="@string/menu_household"
        tools:layout="@layout/fragment_household" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="de.reitler.cleaning_plan_android_client.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="de.reitler.cleaning_plan_android_client.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings"/>

    <fragment
        android:id="@+id/nav_about"
        android:name="de.reitler.cleaning_plan_android_client.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about"/>

</navigation>