<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_task_title"
        android:hint="@string/task_title_hint"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_task_description"
        android:hint="@string/task_description_hint"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create_task_repetitive"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_tasks_repetitive"
        android:labelFor="@+id/create_task_repetitive"/>
    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_task_endDate"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:id="@+id/create_task_switch_roommate"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/switch_roommate"
        android:labelFor="@+id/create_task_switch_roommate"/>
    <EditText
        android:id="@+id/create_task_time_interval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:visibility="invisible"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/create_task_time_interval"
        android:text="@string/time_interval_days"/>
</LinearLayout>