<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/update_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_title_hint" />

    <EditText
        android:id="@+id/update_task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_description_hint" />

    <DatePicker
        android:id="@+id/update_task_endDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/update_task_switch_roommate_layout">

        <CheckBox
            android:id="@+id/update_task_switch_roommate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/update_task_switch_roommate_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/update_task_switch_roommate"
            android:text="@string/switch_roommate" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/update_task_time_interval_layout">

        <EditText
            android:id="@+id/update_task_time_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time" />

        <TextView
            android:id="@+id/update_task_time_interval_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/update_task_time_interval"
            android:text="@string/time_interval_days" />
    </LinearLayout>
</LinearLayout>
