<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.household.HouseholdFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="?android:dividerHorizontal"
        android:showDividers="middle"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:id="@+id/household_name"
                android:text="@string/roommates"
                android:textSize="@dimen/subtitle_size"/>
            <Button
                android:id="@+id/add_roommate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="right"
                app:icon="@drawable/ic_baseline_person_add_24"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/roommates_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/holiday_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/holiday_mode"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:id="@+id/household_task_list_title"
            android:text="@string/tasks"
            android:textSize="@dimen/subtitle_size"/>
        android:textSize="@dimen/subtitle_size"/>
        <Button
            android:id="@+id/add_task_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="right"
            app:icon="@drawable/ic_baseline_add_24"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"/>

    </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/household_task_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"/>

    </LinearLayout>

</ScrollView>